updated combat to look for spell damage when available with damage function, added an interval for mana regeneration and a regeneration function, updated number formating function to floor all numbers to avoid visible decimals

--- a/basestyle.css
+++ b/basestyle.css
@@ -470,7 +470,6 @@ body {
 .player-health-bar,
 .enemy-health-bar {
     background-color: rgb(212, 60, 60);
-    width: 100%;
 }
 
 
@@ -507,7 +506,6 @@ body {
 .player-mana-bar,
 .enemy-mana-bar {
     background-color: rgb(86, 86, 212);
-    width: 100%;
 }
 
 /* player and enemy info display end*/
